--- a/OrganWeb/OrganWeb/Areas/Sistema/Views/Financeiro/Index.cshtml
+++ b/OrganWeb/OrganWeb/Areas/Sistema/Views/Financeiro/Index.cshtml
@@ -21,30 +21,29 @@
                 </div>
             </div>
 
-            <!--SALDO-->
+            <!--SALDO
 
-            <div class="col-md-8">
-                <div class="card">
-                    <div class="card-header">
-                        <h6 class="card-title box-title">Saldo</h6>
-                        <div class="card-header-right">
-                            <ul class="list-unstyled card-option">
-                                <li><i class="ti-minus minimize-card"></i></li>
-                                <li><i class="icon-refresh"></i></li>
-                            </ul>
-                        </div>
-                    </div>
-                    <div class="card-body">
-                        <div class="card-content">
-                            @foreach (var item in Model.VwSaldos)
-                            {
-                                <p>R$ @Html.DisplayFor(modelItem => item.Saldo)</p>
-                            }
-                        </div>
-                    </div>
+    <div class="col-md-8">
+        <div class="card">
+            <div class="card-header">
+                <h6 class="card-title box-title">Saldo</h6>
+                <div class="card-header-right">
+                    <ul class="list-unstyled card-option">
+                        <li><i class="ti-minus minimize-card"></i></li>
+                        <li><i class="icon-refresh"></i></li>
+                    </ul>
                 </div>
             </div>
-
+            <div class="card-body">
+                <div class="card-content">
+                    @*@foreach (var item in Model.VwSaldos)
+                    {
+                        <p>R$ @Html.DisplayFor(modelItem => item.Saldo)</p>
+                    }*@
+                </div>
+            </div>
+        </div>
+    </div>-->
             <!--COMPRAS-->
 
             <div class="card">
@@ -65,6 +64,7 @@
                                     <th scope="col">#</th>
                                     <th scope="col">Data</th>
                                     <th scope="col">Item</th>
+                                    <th scope="col">Estoque</th>
                                     <th scope="col">Valor</th>
                                 </tr>
                             </thead>
