--- a/OrganWeb/OrganWeb/Areas/Sistema/Views/Funcionario/Funcionario.cshtml
+++ b/OrganWeb/OrganWeb/Areas/Sistema/Views/Funcionario/Funcionario.cshtml
@@ -23,80 +23,56 @@
                     
 
 
-                        <table class="table">
-                            <thead class="thead-title">
-                                <tr>
-                                    <th scope="col">#</th>
-                                    <th scope="col">Nome</th>
-                                    <th scope="col">Sobrenome</th>
-                                    <th scope="col">Cargo</th>
-                                    <th scope="col">CPF</th>
-                                    <th scope="col">RG</th>
-                                    <th scope="col">DataNascimento</th>
-                                    <th scope="col">Email</th>
-                                    <th scope="col">Salario</th>
-                                    <th scope="col">GrauInstrucao</th>
-                                    <th scope="col">DataContratacao</th>
-                                    <th scope="col">TipoContratacao</th>
-                                    <th scope="col">PeriodoContratacao</th>
-                                    <th scope="col">CEP</th>
-                                    <th scope="col">Numero</th>
+                    <table class="table">
+                        <thead class="thead-title">
+                            <tr>
+                                <th scope="col">#</th>
+                                <th scope="col">Nome</th>
+                                <th scope="col">Sobrenome</th>
+                                <th scope="col">Cargo</th>
+                                <th scope="col">CPF</th>
+                                <th scope="col">RG</th>
+                                <th scope="col">DataNascimento</th>
+                                <th scope="col">Email</th>
+                                <th scope="col">Salario</th>
+                                <th scope="col">GrauInstrucao</th>
+                                <th scope="col">DataContratacao</th>
+                                <th scope="col">TipoContratacao</th>
+                                <th scope="col">PeriodoContratacao</th>
+                                <th scope="col">CEP</th>
+                                <th scope="col">Numero</th>
 
-                                </tr>
+                            </tr>
 
-                            </thead>
-                            @*
-        <tbody>
-            @foreach (var item in Model.Funcionario)
-                {
-            <tr>
-                <th scope="row"></th>
-                <td>@Html.DisplayFor(modelItem => item.Nome)</td>
-                <td>@Html.DisplayFor(modelItem => item.Sobrenome)</td>
-                <td>@Html.DisplayFor(modelItem => item.Cargo)</td>
-                <td>@Html.DisplayFor(modelItem => item.CPF)</td>
-                <td>@Html.DisplayFor(modelItem => item.RG)</td>
-                <td>@Html.DisplayFor(modelItem => item.DataNascimento)</td>
-                <td>@Html.DisplayFor(modelItem => item.Email)</td>
-                <td>@Html.DisplayFor(modelItem => item.Salario)</td>
-                <td>@Html.DisplayFor(modelItem => item.GrauInstrucao)</td>
-                <td>@Html.DisplayFor(modelItem => item.DataContratacao)</td>
-                <td>@Html.DisplayFor(modelItem => item.TipoContratacao)</td>
-                <td>@Html.DisplayFor(modelItem => item.PeriodoContratacao)</td>
-                <td>@Html.DisplayFor(modelItem => item.CEP)</td>
-                <td>@Html.DisplayFor(modelItem => item.Numero)</td>
+                        </thead>
 
-
+                        @*   <tbody>
+        @foreach (var item in Model.Funcionario)
+            {
+        <tr>
+            <th scope="row"></th>
+            <td>@Html.DisplayFor(modelItem => item.Nome)</td>
+            <td>@Html.DisplayFor(modelItem => item.Sobrenome)</td>
+            <td>@Html.DisplayFor(modelItem => item.Cargo)</td>
+            <td>@Html.DisplayFor(modelItem => item.CPF)</td>
+            <td>@Html.DisplayFor(modelItem => item.RG)</td>
+            <td>@Html.DisplayFor(modelItem => item.DataNascimento)</td>
+            <td>@Html.DisplayFor(modelItem => item.Email)</td>
+            <td>@Html.DisplayFor(modelItem => item.Salario)</td>
+            <td>@Html.DisplayFor(modelItem => item.GrauInstrucao)</td>
+            <td>@Html.DisplayFor(modelItem => item.DataContratacao)</td>
+            <td>@Html.DisplayFor(modelItem => item.TipoContratacao)</td>
+            <td>@Html.DisplayFor(modelItem => item.PeriodoContratacao)</td>
+            <td>@Html.DisplayFor(modelItem => item.CEP)</td>
+            <td>@Html.DisplayFor(modelItem => item.Numero)</td>
 
 
 
-            </tr>
-                }
-                            *@
-                            </tbody>
 
-                            @*tabela p teste, quando tiver o banco, descomente a outra e apague esta*@
-                            <tbody>
 
-                                <tr class="linha">
-                                    <th scope="row"></th>
-                                    <td>Praga1</td>
-                                    <td>Solo</td>
-                                    <td>Incidencia</td>
-                                    <td>Vento</td>
-                                    <td>Acidez</td>
-                                    <td>Estoque</td>
-                                    <td>Fornecedor</td>
-                                    <td>Categoria</td>
-                                    <td>Categoria</td>
-                                    <td>Praga1</td>
-                                    <td>Praga1</td>
-                                    <td>Praga1</td>
-                                    <td>Praga1</td>
-                                    <td>Praga1</td>
-                                </tr>
-
-                            </tbody>
+        </tr>
+            }
+                        *@
 
 
 
