--- a/OrganWeb/OrganWeb/Areas/Sistema/Views/PragaDoenca/Create.cshtml
+++ b/OrganWeb/OrganWeb/Areas/Sistema/Views/PragaDoenca/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model OrganWeb.Areas.Sistema.Models.Controles.Doenca
+﻿@model OrganWeb.Areas.Sistema.Models.ViewModels.CreatePragaOrDoencaViewModel
 
 @using (Html.BeginForm("Create", "Doencas", FormMethod.Post)) 
 {
@@ -18,28 +18,14 @@
     </div>
 
     <div class="form-group">
-        @Html.LabelFor(model => model.Sintomas, htmlAttributes: new { @class = "control-label col-md-2" })
+        @Html.LabelFor(model => model.PD, htmlAttributes: new { @class = "control-label col-md-2" })
         <div class="col-md-12">
-            @Html.EditorFor(model => model.Sintomas, new { htmlAttributes = new { @class = "form-control" } })
-            @Html.ValidationMessageFor(model => model.Sintomas, "", new { @class = "text-danger" })
+            @Html.EditorFor(model => model.PD, new { htmlAttributes = new { @class = "form-control" } })
+            @Html.ValidationMessageFor(model => model.PD, "", new { @class = "text-danger" })
         </div>
     </div>
 
-    <div class="form-group">
-        @Html.LabelFor(model => model.Tratamento, htmlAttributes: new { @class = "control-label col-md-2" })
-        <div class="col-md-12">
-            @Html.EditorFor(model => model.Tratamento, new { htmlAttributes = new { @class = "form-control" } })
-            @Html.ValidationMessageFor(model => model.Tratamento, "", new { @class = "text-danger" })
-        </div>
-    </div>
-
-    <div class="form-group">
-        @Html.LabelFor(model => model.Descricao, htmlAttributes: new { @class = "control-label col-md-4" })
-        <div class="col-md-12">
-            @Html.EditorFor(model => model.Descricao, new { htmlAttributes = new { @class = "form-control" } })
-            @Html.ValidationMessageFor(model => model.Descricao, "", new { @class = "text-danger" })
-        </div>
-    </div>
+  @*eu sei q eh diferente pq é bool, vejo com a milena depois*@
 
     <div class="modal-footer">
         <div class="col-md-offset-2 col-md-4">
