--- a/OrganWeb/OrganWeb/Areas/Sistema/Views/Semente/Index.cshtml
+++ b/OrganWeb/OrganWeb/Areas/Sistema/Views/Semente/Index.cshtml
@@ -19,6 +19,18 @@
                         </ul>
                     </div>
                 </div>
+                <div class="card-content">
+                    <div class="card border-success mb-3" style="max-width: 18rem;">
+                        <div class="card-body text-success">
+                            <h5 class="card-title">Nova Semente</h5>
+                            <p class="card-text">
+                                <div class="overlay"></div>
+                                <a class="popup btn btn-add" href="/Sistema/Semente/Create" style="margin-bottom:20px; margin-top:20px;">Nova Semente</a>
+                            </p>
+                        </div>
+
+                    </div>
+                </div>
                 <div class="card-body">
                     <div class="card-content">
                         <div class="card bg-light mb-3" style="max-width: 18rem;">
@@ -28,55 +40,51 @@
                                     <tr>
                                         <th scope="col">#</th>
                                         <th scope="col">Nome</th>
-                                        <th scope="col">SoloIdeal</th>
-                                        <th scope="col">IncidenciaSolar</th>
-                                        <th scope="col">IncidenciaVento</th>
+                                        <th scope="col">Solo</th>
+                                        <th scope="col">IncSol</th>
+                                        <th scope="col">IncVento</th>
                                         <th scope="col">Acidez</th>
-                                        <th scope="col">IdEstoque</th>
-                                        <th scope="col">IdFornecedor</th>
-                                        <th scope="col">IdCategoria</th>
+                                        <th scope="col">NomeFantasia</th>
+                                        <th scope="col">Qtd</th>
+                                        <th scope="col">UM</th>
+                                        <th scope="col">ValorUnit</th>
 
 
 
                                     </tr>
                                 </thead>
-                                @**<tbody>
-                                        @foreach (var item in Model.Semente)
-                                        {
-                                            <tr>
-                                                <th scope="row"></th>
-                                                <td>@Html.DisplayFor(modelItem => item.Nome)</td>
-                                                <td>@Html.DisplayFor(modelItem => item.SoloIdeal)</td>
-                                                <td>@Html.DisplayFor(modelItem => item.IncSolar)</td>
-                                                <td>@Html.DisplayFor(modelItem => item.IncVento)</td>
-                                                <td>@Html.DisplayFor(modelItem => item.Acidez)</td>
-                                                <td>@Html.DisplayFor(modelItem => item.IdEstoque)</td>
-                                                <td>@Html.DisplayFor(modelItem => item.IdFornecedor)</td>
-                                                <td>@Html.DisplayFor(modelItem => item.IdCategoria)</td>
+                               <tbody>
+                            @foreach (var item in Model.Semente)
+                            {
+                                   <tr>
+                                       <th scope="row"></th>
+                                       <td>@Html.DisplayFor(modelItem => item.Nome)</td>
+                                       <td>@Html.DisplayFor(modelItem => item.Solo)</td>
+                                       <td>@Html.DisplayFor(modelItem => item.IncSol)</td>
+                                       <td>@Html.DisplayFor(modelItem => item.IncVento)</td>
+                                       <td>@Html.DisplayFor(modelItem => item.Acidez)</td>
+                                       @foreach (var items in Model.FornecedorSementes)
+                                       {
+                                           <td>@Html.DisplayFor(modelItem => items.NomeFantasia)</td>
+
+
+                                       }
+                                       @foreach (var itemss in Model.Estoques)
+                                       {
+                                           <td>@Html.DisplayFor(modelItem => itemss.Qtd)</td>
+                                           <td>@Html.DisplayFor(modelItem => itemss.ValorUnit)</td>
+                                       }
 
 
 
 
+                                   </tr>
+                            }
+                                 
+                        </tbody>
+                        
+                             
 
-                                            </tr>
-                                        }
-                                    </tbody>*@
-@*tabela p teste do modal*@
-                                <tbody>
-
-                                    <tr class="linha">
-                                        <th scope="row"></th>
-                                        <td>Praga1</td>
-                                        <td>Solo</td>
-                                        <td>Incidencia</td>
-                                        <td>Vento</td>
-                                        <td>Acidez</td>
-                                        <td>Estoque</td>
-                                        <td>Fornecedor</td>
-                                        <td>Categoria</td>
-                                    </tr>
-
-                                </tbody>
 
 
 
