Create semente funfando

--- a/OrganWeb/OrganWeb/Areas/Sistema/Views/Semente/Index.cshtml
+++ b/OrganWeb/OrganWeb/Areas/Sistema/Views/Semente/Index.cshtml
@@ -1,5 +1,4 @@
-﻿
-@model OrganWeb.Areas.Sistema.Models.ViewModels.ViewSementes
+﻿@model OrganWeb.Areas.Sistema.Models.ViewModels.ViewSementes
 @{
     ViewBag.Title = "Sementes";
     Layout = "~/Views/Shared/_Layout.cshtml";
