--- a/OrganWeb/OrganWeb/Areas/Sistema/Views/Fornecedor/Create.cshtml
+++ b/OrganWeb/OrganWeb/Areas/Sistema/Views/Fornecedor/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model OrganWeb.Areas.Sistema.Models.ViewModels.CreateFornecedorViewModel
+﻿@model OrganWeb.Areas.Sistema.Models.Armazenamento.Fornecedor
 
 @using (Html.BeginForm("Create", "Fornecedor", FormMethod.Post))
 {
@@ -10,7 +10,7 @@
     @Html.ValidationSummary(true, "", new { @class = "text-danger" })
 
     <div class="form-group">
-        @Html.LabelFor(model => model.NomeFantasia, htmlAttributes: new { @class = "control-label col-md-2" })
+        @Html.LabelFor(model => model.Pessoa.Nome, htmlAttributes: new { @class = "control-label col-md-2" })
         <div class="col-md-12">
             @Html.EditorFor(model => model.NomeFantasia, new { htmlAttributes = new { @class = "form-control" } })
             @Html.ValidationMessageFor(model => model.NomeFantasia, "", new { @class = "text-danger" })
