--- a/OrganWeb/OrganWeb/Areas/Sistema/Views/Fornecedor/Create.cshtml
+++ b/OrganWeb/OrganWeb/Areas/Sistema/Views/Fornecedor/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model OrganWeb.Areas.Sistema.Models.Armazenamento.Fornecedor
+﻿@model OrganWeb.Areas.Sistema.Models.ViewModels.CreateFornecedorViewModel
 
 @using (Html.BeginForm("Create", "Fornecedor", FormMethod.Post))
 {
@@ -10,7 +10,7 @@
     @Html.ValidationSummary(true, "", new { @class = "text-danger" })
 
     <div class="form-group">
-        @Html.LabelFor(model => model.Pessoa.Nome, htmlAttributes: new { @class = "control-label col-md-2" })
+        @Html.LabelFor(model => model.NomeFantasia, htmlAttributes: new { @class = "control-label col-md-2" })
         <div class="col-md-12">
             @Html.EditorFor(model => model.NomeFantasia, new { htmlAttributes = new { @class = "form-control" } })
             @Html.ValidationMessageFor(model => model.NomeFantasia, "", new { @class = "text-danger" })
@@ -18,74 +18,18 @@
     </div>
 
     <div class="form-group">
-        @Html.LabelFor(model => model.RazaoSocial, htmlAttributes: new { @class = "control-label col-md-2" })
-        <div class="col-md-12">
-            @Html.EditorFor(model => model.RazaoSocial, new { htmlAttributes = new { @class = "form-control" } })
-            @Html.ValidationMessageFor(model => model.RazaoSocial, "", new { @class = "text-danger" })
+        @Html.LabelFor(model => model.DDD, htmlAttributes: new { @class = "control-label col-md-2" })
+        <div class="col-md-10">
+            @Html.DropDownListFor(model => model.DDD, new SelectList(Model.DDDs, "Valor", "Valor"))
+            @Html.ValidationMessageFor(model => model.DDD, "", new { @class = "text-danger" })
         </div>
     </div>
 
     <div class="form-group">
-        @Html.LabelFor(model => model.CNPJ, htmlAttributes: new { @class = "control-label col-md-2" })
-        <div class="col-md-12">
-            @Html.EditorFor(model => model.CNPJ, new { htmlAttributes = new { @class = "form-control" } })
-            @Html.ValidationMessageFor(model => model.CNPJ, "", new { @class = "text-danger" })
-        </div>
-    </div>
-
-    <div class="form-group">
-        @Html.LabelFor(model => model.IE, htmlAttributes: new { @class = "control-label col-md-4" })
-        <div class="col-md-12">
-            @Html.EditorFor(model => model.IE, new { htmlAttributes = new { @class = "form-control" } })
-            @Html.ValidationMessageFor(model => model.IE, "", new { @class = "text-danger" })
-        </div>
-    </div>
-
-    <div class="form-group">
-        @Html.LabelFor(model => model.Telefones, htmlAttributes: new { @class = "control-label col-md-4" })
-        <div class="col-md-12">
-            @Html.EditorFor(model => model.Telefones, new { htmlAttributes = new { @class = "form-control" } })
-            @Html.ValidationMessageFor(model => model.Telefones, "", new { @class = "text-danger" })
-        </div>
-    </div>
-
-    <div class="form-group">
-        @Html.LabelFor(model => model.Email, htmlAttributes: new { @class = "control-label col-md-4" })
-        <div class="col-md-12">
-            @Html.EditorFor(model => model.Email, new { htmlAttributes = new { @class = "form-control" } })
-            @Html.ValidationMessageFor(model => model.Email, "", new { @class = "text-danger" })
-        </div>
-    </div>
-
-    <div class="form-group">
-        @Html.LabelFor(model => model.Endereco, htmlAttributes: new { @class = "control-label col-md-4" })
-        <div class="col-md-12">
-            @Html.EditorFor(model => model.Endereco, new { htmlAttributes = new { @class = "form-control" } })
-            @Html.ValidationMessageFor(model => model.Endereco, "", new { @class = "text-danger" })
-        </div>
-    </div>
-
-    <div class="form-group">
-        @Html.LabelFor(model => model.CEP, htmlAttributes: new { @class = "control-label col-md-4" })
-        <div class="col-md-12">
-            @Html.EditorFor(model => model.CEP, new { htmlAttributes = new { @class = "form-control" } })
-            @Html.ValidationMessageFor(model => model.CEP, "", new { @class = "text-danger" })
-        </div>
-    </div>
-
-    <div class="form-group">
-        @Html.LabelFor(model => model.Rua, htmlAttributes: new { @class = "control-label col-md-4" })
-        <div class="col-md-12">
-            @Html.EditorFor(model => model.Rua, new { htmlAttributes = new { @class = "form-control" } })
-            @Html.ValidationMessageFor(model => model.Rua, "", new { @class = "text-danger" })
-        </div>
-    </div>
-
-    <div class="form-group">
-        @Html.LabelFor(model => model.BCF, htmlAttributes: new { @class = "control-label col-md-4" })
-        <div class="col-md-12">
-            @Html.EditorFor(model => model.BCF, new { htmlAttributes = new { @class = "form-control" } })
-            @Html.ValidationMessageFor(model => model.BCF, "", new { @class = "text-danger" })
+        @Html.LabelFor(model => model.Estado, htmlAttributes: new { @class = "control-label col-md-2" })
+        <div class="col-md-10">
+            @Html.DropDownListFor(model => model.Estado, new SelectList(Model.Estados, "Id", "Nome", Model.Estado), "Estado")
+            @Html.ValidationMessageFor(model => model.Estado, "", new { @class = "text-danger" })
         </div>
     </div>
 
