--- a/OrganWeb/OrganWeb/Areas/Sistema/Views/Maquina/Editar.cshtml
+++ b/OrganWeb/OrganWeb/Areas/Sistema/Views/Maquina/Editar.cshtml
@@ -1,6 +1,6 @@
 ﻿@model OrganWeb.Areas.Sistema.Models.Ferramentas.Maquina
 
-@using (Html.BeginForm()) 
+@using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
     
@@ -8,6 +8,8 @@
         <h4>Maquina</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+        @Html.HiddenFor(model => model.IdEstoque)
+
         <div class="form-group">
             @Html.LabelFor(model => model.Nome, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
@@ -74,7 +76,7 @@
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Create" class="btn btn-default" />
+                <input type="submit" value="Save" class="btn btn-default" />
             </div>
         </div>
     </div>
