--- a/OrganWeb/OrganWeb/Areas/Sistema/Views/PragaDoenca/Create.cshtml
+++ b/OrganWeb/OrganWeb/Areas/Sistema/Views/PragaDoenca/Create.cshtml
@@ -1,17 +1,16 @@
 ﻿@model OrganWeb.Areas.Sistema.Models.ViewModels.CreatePragaOrDoencaViewModel
 
-@using (Html.BeginForm("Create", "Doencas", FormMethod.Post)) 
+@using (Html.BeginForm()) 
 {
     @Html.AntiForgeryToken()
     
 <div class="form-horizontal">
-    <h4>Cadastrar doença</h4>
+    <h4>CreatePragaOrDoencaViewModel</h4>
     <hr />
     @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-
     <div class="form-group">
         @Html.LabelFor(model => model.Nome, htmlAttributes: new { @class = "control-label col-md-2" })
-        <div class="col-md-12">
+        <div class="col-md-10">
             @Html.EditorFor(model => model.Nome, new { htmlAttributes = new { @class = "form-control" } })
             @Html.ValidationMessageFor(model => model.Nome, "", new { @class = "text-danger" })
         </div>
@@ -19,23 +18,26 @@
 
     <div class="form-group">
         @Html.LabelFor(model => model.PD, htmlAttributes: new { @class = "control-label col-md-2" })
-        <div class="col-md-12">
-            @Html.EditorFor(model => model.PD, new { htmlAttributes = new { @class = "form-control" } })
-            @Html.ValidationMessageFor(model => model.PD, "", new { @class = "text-danger" })
+        <div class="col-md-10">
+            <div class="checkbox">
+                @Html.EditorFor(model => model.PD)
+                @Html.ValidationMessageFor(model => model.PD, "", new { @class = "text-danger" })
+            </div>
         </div>
     </div>
 
-  @*eu sei q eh diferente pq é bool, vejo com a milena depois*@
-
-    <div class="modal-footer">
-        <div class="col-md-offset-2 col-md-4">
-            <input type="submit" value="Adicionar" class="btn pull-right" />
+    <div class="form-group">
+        @Html.DropDownList("IdArea", (MultiSelectList)ViewBag.Areas, new { multiple =
+    "multiple", id = "areas" }) 
+    </div>
+        <div class="form-group">
+            <div class="col-md-offset-2 col-md-10">
+                <input type="submit" value="Create" class="btn btn-default" />
+            </div>
         </div>
     </div>
-    
+}
+
+<div>
+    @Html.ActionLink("Back to List", "Index")
 </div>
-}
-
-@section Scripts {
-    @Scripts.Render("~/bundles/jqueryval")
-}
