--- a/OrganWeb/OrganWeb/Areas/Sistema/Views/Plantio/Create.cshtml
+++ b/OrganWeb/OrganWeb/Areas/Sistema/Views/Plantio/Create.cshtml
@@ -1,46 +1,54 @@
 ﻿@model OrganWeb.Areas.Sistema.Models.ViewModels.CreatePlantioViewModel
 
-<h4>Novo plantio</h4>
-@using (Html.BeginForm("Create", "Plantio", FormMethod.Post, new { id = "popupForm" }))
+<h4 class="modal-title">Cadastrar plantio</h4>
+@using (Html.BeginForm("Create", "Plantio", FormMethod.Post))
 {
     @Html.AntiForgeryToken()
 
     @Html.ValidationSummary(true, "", new { @class = "text-danger" })
     <div class="form-group">
-        @Html.LabelFor(model => model.Nome, htmlAttributes: new { @class = "control-label col-md-2" })
-        <div class="col-md-10">
-            @Html.EditorFor(model => model.Nome, new { htmlAttributes = new { @class = "form-control" } })
+        <div class="col">
+            @Html.LabelFor(model => model.Nome, new { htmlAttributes = new { @class = "form-control" } })
+        </div>
+        <div class="col">
+            @Html.EditorFor(model => model.Nome, new { htmlAttributes = new { @class = "form-control campo" } })
             @Html.ValidationMessageFor(model => model.Nome, "", new { @class = "text-danger" })
         </div>
     </div>
 
-    <div class="form-group">
-        @Html.LabelFor(model => model.Sistema, htmlAttributes: new { @class = "control-label col-md-2" })
-        <div class="col-md-10">
-            @Html.DropDownListFor(model => model.Sistema, Model.Sistemas, new { htmlAttributes = new { @class = "form-control" } })
+    <div class="form-group row">
+        <div class="col-sm-6">
+            @Html.LabelFor(model => model.Sistema, new { htmlAttributes = new { @class = "form-control" } })
+        </div>
+
+        <div class="col-sm-6">
+            @Html.LabelFor(model => model.Tipo, new { htmlAttributes = new { @class = "form-control" } })
+        </div>
+
+        <div class="col-sm-6">
+            @Html.DropDownListFor(model => model.Sistema, Model.Sistemas, new { htmlAttributes = new { @class = "form-control campo" } })
             @Html.ValidationMessageFor(model => model.Sistema, "", new { @class = "text-danger" })
         </div>
-    </div>
-
-    <div class="form-group">
-        @Html.LabelFor(model => model.Tipo, htmlAttributes: new { @class = "control-label col-md-2" })
-        <div class="col-md-10">
-            @Html.DropDownListFor(model => model.Tipo, Model.Periodos, new { htmlAttributes = new { @class = "form-control" } })
+        <div class="col-sm-6">
+            @Html.DropDownListFor(model => model.Tipo, Model.Periodos, new { htmlAttributes = new { @class = "form-control campo" } })
             @Html.ValidationMessageFor(model => model.Tipo, "", new { @class = "text-danger" })
         </div>
     </div>
 
-    <div class="form-group">
-        @Html.LabelFor(model => model.Inicio, htmlAttributes: new { @class = "control-label col-md-2" })
-        <div class="col-md-10">
+    <div class="form-group row">
+        <div class="col-sm-6">
+            @Html.LabelFor(model => model.Inicio, new { htmlAttributes = new { @class = "form-control" } })
+        </div>
+
+        <div class="col-sm-6">
+            @Html.LabelFor(model => model.Colheita, new { htmlAttributes = new { @class = "form-control" } })
+        </div>
+
+        <div class="col-sm-6">
             @Html.EditorFor(model => model.Inicio, new { htmlAttributes = new { @class = "form-control" } })
             @Html.ValidationMessageFor(model => model.Inicio, "", new { @class = "text-danger" })
         </div>
-    </div>
-
-    <div class="form-group">
-        @Html.LabelFor(model => model.Colheita, htmlAttributes: new { @class = "control-label col-md-2" })
-        <div class="col-md-10">
+        <div class="col-sm-6">
             @Html.EditorFor(model => model.Colheita, new { htmlAttributes = new { @class = "form-control" } })
             @Html.ValidationMessageFor(model => model.Colheita, "", new { @class = "text-danger" })
         </div>
@@ -57,7 +65,7 @@
     <div class="form-group">
         @Html.LabelFor(model => model.Densidade, htmlAttributes: new { @class = "control-label col-md-2" })
         <div class="col-md-10">
-            @Html.EditorFor(model => model.Densidade, new { htmlAttributes = new { @class = "form-control" } })
+            @Html.EditorFor(model => model.Densidade, new { htmlAttributes = new { @class = "form-control campo" } })
             @Html.ValidationMessageFor(model => model.Densidade, "", new { @class = "text-danger" })
         </div>
     </div>
@@ -73,21 +81,14 @@
     <div class="form-group">
         @Html.LabelFor(model => model.Quantidade, htmlAttributes: new { @class = "control-label col-md-2" })
         <div class="col-md-10">
-            @Html.EditorFor(model => model.Quantidade, new { htmlAttributes = new { @class = "form-control" } })
+            @Html.EditorFor(model => model.Quantidade, new { htmlAttributes = new { @class = "form-control campo" } })
             @Html.ValidationMessageFor(model => model.Quantidade, "", new { @class = "text-danger" })
         </div>
     </div>
 
-    <div class="form-group">
-        <div class="col-md-offset-2 col-md-10">
-            <input type="submit" value="Create" class="btn btn-default" />
-        </div>
-    </div>
+    <button type="submit" class="btn btn-addmodal" data-save="ajax-modal">Adicionar</button>
 }
 
-<div>
-    @Html.ActionLink("Back to List", "Index")
-</div>
-
-@Scripts.Render("~/bundles/jquery")
-@Scripts.Render("~/bundles/jqueryval")
+@section Scripts {
+    @Scripts.Render("~/bundles/jqueryval")
+}
